--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
 - !lcc 'DU'
 - !lcsh 'Wentworth, W. C. (William Charles), 1790-1872'
 - !lcsh 'Tasmania -- Description and travel'
+- GITenberg
 title: "Statistical, Historical and Political Description of the Colony of New South\
   \ Wales and its Dependent Settlements in Van Diemen's Land\r\nWith a Particular\
   \ Enumeration of the Advantages Which These Colonies Offer for Emigration, and Their\
